test/syntax/solidity/types/address/address_literal_to_payable_err.sol
contract C {
    function f() public pure {
        address payable a = address("vite_61214664a1081e286152011570993a701735f5c2c12198ce63");
        address payable b = "vite_61214664a1081e286152011570993a701735f5c2c12198ce63";
    }
}
// ----
// TypeError 9574: (52-138): Type address is not implicitly convertible to expected type address payable.
// TypeError 9574: (148-225): Type address is not implicitly convertible to expected type address payable.
